client/src/App.css
/*
####################################################
M E D I A  Q U E R I E S
####################################################
*/

/*
::::::::::::::::::::::::::::::::::::::::::::::::::::
Bootstrap 4 breakpoints
*/

/* 
GLOBAL DEVICE STYLES - All devices (portrait phones, less than 576px) and larger
No media query since this is the default in Bootstrap because it is "mobile first"
*/

body {
  font-family: "Roboto", sans-serif;
  font-weight: 300;
}

.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.modal-form {
  border: 1px solid #dddddd;
  padding: 0;
  margin-top: 5em;
}

.modal-form .right-col {
  padding: 4em 2em;
}
tr .hover-icon {
  margin-right: 0.5rem;
  opacity: 0;
  transition: opacity 0.1s ease-out;
  cursor: pointer;
  transition-delay: 0.2s;
}
tr:hover .hover-icon {
  opacity: 1;
  transition-delay: 0.2s;
}

.ingredients-form .form-group {
  margin-bottom: 0;
}

.sl-page-heading {
  margin-top: 3em;
  margin-bottom: 1em;
  position: relative;
}

.sl-page-heading h2 {
  margin-left: 15px;
}

.sl-page-heading button.new-recipe {
  position: absolute;
  right: 15px;
}

.sl-price {
  float: right;
}

.removed {
  text-decoration: line-through;
}

.my-recipes-header {
  margin-top: 2em;
}

.added {
  margin-top: 2em;
}

.pie {
  margin-bottom: 2em;
}

.react-autosuggest__container {
  position: relative;
}

.react-autosuggest__input {
  width: 100%;
  height: calc(1.5em + 0.75rem + 2px);
  padding: 10px 20px;
  font-family: Helvetica, sans-serif;
  font-weight: 300;
  font-size: 16px;
  border: 1px solid #ced4da;
  border-radius: 4px;
}

.react-autosuggest__input:focus {
  outline: none;
}

.react-autosuggest__container--open .react-autosuggest__input {
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.react-autosuggest__suggestions-container {
  display: none;
}

.react-autosuggest__container--open .react-autosuggest__suggestions-container {
  display: block;
  position: absolute;
  /* width: 240px; */
  width: 100%;
  background-color: #fff;
  font-family: Helvetica, sans-serif;
  font-weight: 300;
  font-size: 16px;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
  z-index: 2;
}

.react-autosuggest__suggestions-list {
  margin: 0;
  padding: 0;
}

.list-group {
  border-radius: 0;
}

.list-group.lst-grp-hover li:hover {
  background: #d3d3d3;
  cursor: pointer;
}

div.list-group.lst-grp-striped li:nth-of-type(odd) {
  background: #f1f1f1;
}
div.list-group.lst-grp-striped li:nth-of-type(even) {
  background: #ffffff;
}
div.list-group.lst-grp-hover li:hover {
  background: #d3d3d3;
  cursor: pointer;
}

.react-autosuggest__suggestion {
  cursor: pointer;
  /*   padding: 10px 20px; */
  display: inline-block;
  margin: 6px 3px;
}

.react-autosuggest__suggestion > span {
  padding: 4px 8px;
  color: #eee;
}

.react-autosuggest__suggestion--focused {
  background-color: brown;
  color: #fff;
}

.suggestion-content {
  /*   display: flex; */
  /*   align-items: center; */
  background-repeat: no-repeat;
  border-radius: 25px;
}

.highlight {
  color: #fff;
  font-weight: bold;
}

.react-autosuggest__suggestion--focused .highlight {
  color: #fff;
}

.table th,
.table td {
  border-top: initial;
  padding: 0.4rem;
}

.table thead th {
  border-bottom: initial;
}

td.delete {
  padding-top: 0.75rem;
}

.shop-list {
  margin-bottom: 1em;
}

.is-active {
  color: red;
}

/* Strikethrough */
@keyframes strike {
  0% {
    width: 0;
  }
  100% {
    width: 100%;
  }
}
.strike {
  position: relative;
  padding-right: 2%;
}
.strike::after {
  content: " ";
  position: absolute;
  top: 50%;
  left: -3%;
  width: 0;
  height: 1px;
  background: black;
  /* animation: strike 3s 0.1s ease-in; */
  animation-name: strike;
  animation-duration: 0.2s;
  animation-timing-function: ease-in;
  animation-iteration-count: 1;
  animation-fill-mode: forwards;
  animation-delay: 0.05s;
}

.flex-center {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 100%;
}

.footer-copyright {
  overflow: hidden;
  color: rgba(255, 255, 255, 0.6);
  background-color: rgba(0, 0, 0, 0.2);
}

footer {
  margin-top: 6em;
}

#add-recipe-form img {
  margin: 1em 0.3em;
  border: 1px solid #d2d2d2;
}

.ingredients table thead th {
  font-weight: 300;
}

.category-legend {
  list-style: none;
}

.trial-cover {
  position: absolute;
  height: 10px;
  background-color: white;
  top: 420px;
  width: 100%;
  height: 20px;
  /* bottom: 108px; */
}
.list-group-item {
  padding: 0.6rem 1.25rem;
}

.myStaples .list-group-item,
.myRecipes .list-group-item {
  padding: 0.3rem 1.25rem;
}

.pie-chart-container > div {
  margin-top: 35px;
}

.totals {
  position: absolute;
  z-index: 10000;
  top: 208px;
  right: 0;
  left: 0;
  width: 100%;
  text-align: center;
  font-size: 1.8rem;
  font-weight: bold;
}

.totals span {
  display: block;
  font-weight: 300;
  font-size: 1rem;
  margin-top: -8px;
}

.pie h5 {
  position: absolute;
  z-index: 100;
}

.new-recipe {
  float: right;
}

.divider {
  margin-bottom: 2em;
}

.list-group-row {
  margin-bottom: 2em;
}

.card-title {
  /* font-size: 1.1rem; */
  font-size: 1rem;
  margin-bottom: 0.25rem;
}

.avg-star-rating label {
  margin-bottom: 0;
}

.avg-star-rating div {
  font-size: 0.8rem;
}

.card-text {
  font-size: 0.8rem;
}
/* ... */

